# mogdevice

./: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
docs/: index.rst  install.rst
examples/: possible_power_values.ipynb
mogdevice/: __init__.py  mogdevice.py  qrf.py
