[metadata]
name = mogdevice
description = moglabs device class
url = https://github.com/bleykauf/mogdevice
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.4
setup_requires =
    setuptools >= 38.3.0
install_requires = 
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = mogdevice/_version.py
versionfile_build = mogdevice/_version.py
tag_prefix =
parentdir_prefix = mogdevice-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = mogdevice/_version.py
max-line-length = 88
extend-ignore = E203